// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test reducer set 1`] = `
Map {
  0 => 1000,
}
`;

exports[`Test reducer update balance 1`] = `
Map {
  1 => 250,
}
`;

exports[`Test set 1`] = `
Object {
  "currency": 0,
  "price": 1000,
  "type": 0,
}
`;

exports[`Test update price 1`] = `
Object {
  "currency": 1,
  "price": 250,
  "type": 1,
}
`;
